# alx-project-nexus

./: .env.dev  .env.example  .gitignore  .yamllint.yml  Makefile  Postman_Collection_ECommerce_API.json  Postman_ECommerce_Collection.json  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  pyproject.toml  setup.sh
.github/workflows/: cd.yml  ci.yml  docker-backend.yml
backend/: Dockerfile  Procfile  build.sh  entrypoint.sh  render.yaml
backend/apps/accounts/: admin.py  apps.py  managers.py  models.py  permissions.py  schemas.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/cart/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/cart/migrations/: 0001_initial.py
backend/apps/orders/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/orders/migrations/: 0001_initial.py  0002_order_billing_same_as_shipping.py  0003_order_shipping_carrier_order_tracking_number.py
backend/apps/products/: admin.py  apps.py  filters.py  managers.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
backend/apps/products/migrations/: 0001_initial.py
backend/apps/reviews/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/reviews/migrations/: 0001_initial.py
backend/backend/: celery.py  urls.py
backend/backend/settings/: base.py  dev.py  production.py
backend/requirements/: base.txt  dev.txt  production.txt
docs/: README.md
docs/development/: setup.md
nginx/: nginx.conf
scripts/database/: init.sql
scripts/dev/: start_dev.sh  stop_dev.sh  test.sh
